--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Welcome to DogeBot. Let's make much wow money.</h1>
-        <img src="https://www.supercryptonews.com/wp-content/uploads/2020/07/doge.jpg" />
+        <h1>Kyriu est en ligne.</h1>
+
     </body>
 </html>
